src/dialogs/qquickfontdialog.cpp
@@ -119,10 +119,4 @@ QQuickFontDialog::~QQuickFontDialog()
     \l Window or an \l Item.
 */
 
-void QQuickFontDialog::accept()
-{
-    setFont(m_currentFont);
-    QQuickAbstractFontDialog::accept();
-}
-
 QT_END_NAMESPACE
